# HaskellGame

./: .gitignore  README.md  Setup.hs  gloss-counter.cabal
ToBITMAPconverter/: converter.py
src/: Controls.hs  Grid.hs  Main.hs  Moveable.hs  Player.hs  State.hs  Tick.hs  View.hs
src/levels/: cage.txt  cage2.txt
