name:                gloss-counter
version:             0.1.0.0
author:              Jason van Otterlo
maintainer:          ja.van.otterlo@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gloss-counter
	main-is:			Main.hs
	build-depends:		base >= 4 && < 5,
						gloss,
						random
	hs-source-dirs:		src
	other-modules:		Player
						Grid
						State
						View
						Tick
						Controls
						Moveable
	default-language:	Haskell2010